Update publication metadata for Bayesian design paper

--- a/index.html
+++ b/index.html
@@ -334,11 +334,13 @@
   <div class="publication-card">
   <h4 class="pub-title">Gradient-Free Sequential Bayesian Experimental Design via Interacting Particle Systems</h4>
   <p class="pub-authors">Gruhlke, R., Hanu, M., Schillings, C., & Wacker, P.</p>
-  <p class="pub-meta"><em>arXiv preprint</em>, arXiv:2504.13320 (2025)</p>
-    
-    <div class="pub-links">
+  <p class="pub-meta">
+    <em>Accepted for publication in</em> <strong>SIAM/ASA Journal on Uncertainty Quantification</strong><br>
+    <em>arXiv preprint</em>, arXiv:2504.13320 (2025)
+  </p>
+  <div class="pub-links">
     <a class="pub-tag" href="https://www.arxiv.org/abs/2504.13320" target="_blank">📄 Paper</a>
-    </div>
+  </div>
 </div>
 
 <div class="publication-card">
