Revise publication entries and update metadata
Updated publication details and added new papers to the list. Removed outdated entries and adjusted metadata for accuracy.

--- a/index.html
+++ b/index.html
@@ -332,15 +332,58 @@
   <h3>Preprints</h3>
 
   <div class="publication-card">
-  <h4 class="pub-title">Gradient-Free Sequential Bayesian Experimental Design via Interacting Particle Systems</h4>
-  <p class="pub-authors">Gruhlke, R., Hanu, M., Schillings, C., & Wacker, P.</p>
+  <h4 class="pub-title">Leveraging Low-Rank Structures for High-Dimensional Score-Based Sampling</h4>
+  <p class="pub-authors">Gruhlke, R., Berner J., Richter L., D. Sommer.</p>
+  <p class="pub-meta"><em>ICML 2026</em>, submitted</p>
+
+    <div class="pub-links">
+    <a class="pub-tag" href="https://arxiv.org/abs/2203.09358" target="_blank">📄 Paper</a>
+    </div>
+</div>
+
+  <div class="publication-card">
+  <h4 class="pub-title">Multiplicative Diffusion Models: Beyond Gaussian Latents</h4>
+  <p class="pub-authors">Gruhlke, R., Resseguier, V., Talla Makougne, M.</p>
+  <p class="pub-meta">
+    <em>Accepted for publication in</em> <strong>ICLR 2026</strong><br>
+  </p>
+  <div class="pub-links">
+    <a class="pub-tag" href="https://openreview.net/forum?id=F6w8LcJJFA" target="_blank">📄 Paper</a>
+  </div>
+</div>
+
+   <div class="publication-card">
+  <h4 class="pub-title">Provable Mixed-Noise Learning with Flow-Matching</h4>
+  <p class="pub-authors">Hagemann, P., Gruhlke, R., Stankewitz, B., Schillings, C., & Steidl, G.</p>
   <p class="pub-meta">
     <em>Accepted for publication in</em> <strong>SIAM/ASA Journal on Uncertainty Quantification</strong><br>
-    <em>arXiv preprint</em>, arXiv:2504.13320 (2025)
+    <em>arXiv preprint</em>, arXiv:2508.18122. (2025)
   </p>
   <div class="pub-links">
     <a class="pub-tag" href="https://www.arxiv.org/abs/2504.13320" target="_blank">📄 Paper</a>
   </div>
+</div>
+
+  <div class="publication-card">
+  <h4 class="pub-title">Gradient-Free Sequential Bayesian Experimental Design via Interacting Particle Systems</h4>
+  <p class="pub-authors">Gruhlke, R., Hanu, M., Schillings, C., & Wacker, P.</p>
+  <p class="pub-meta">
+    <em>Accepted for publication in</em> <strong>Theoretical Foundations of Deep Learning, book series, Springer Nature </strong><br>
+    <em>arXiv preprint</em>, arXiv:2508.18122 (2025)
+  </p>
+  <div class="pub-links">
+    <a class="pub-tag" href="https://arxiv.org/abs/2508.18122" target="_blank">📄 Paper</a>
+  </div>
+</div>
+
+
+<div class="publication-card">
+  <h4 class="pub-title">Optimal sampling for stochastic and natural gradient descent</h4>
+  <p class="pub-authors">Gruhlke, R., Nouy, A., & Trunschke, P.</p>
+  <p class="pub-meta"><em>arXiv preprint</em>, arXiv:2402.03113 (2024) — In revision at JOTA</p>
+      <div class="pub-links">
+    <a class="pub-tag" href="https://arxiv.org/abs/2402.03113" target="_blank">📄 Paper</a>
+    </div>
 </div>
 
 <div class="publication-card">
@@ -353,23 +396,9 @@
     </div>
 </div>
 
-<div class="publication-card">
-  <h4 class="pub-title">Generative Modelling with Tensor Train approximations of Hamilton–Jacobi–Bellman equations</h4>
-  <p class="pub-authors">Sommer, D., Gruhlke, R., Kirstein, M., Eigel, M., & Schillings, C.</p>
-  <p class="pub-meta"><em>arXiv preprint</em>, arXiv:2402.15285 (2024) — In revision at SISC</p>
-    <div class="pub-links">
-    <a class="pub-tag" href="https://arxiv.org/abs/2402.15285" target="_blank">📄 Paper</a>
-    </div>
-</div>
 
-<div class="publication-card">
-  <h4 class="pub-title">Optimal sampling for stochastic and natural gradient descent</h4>
-  <p class="pub-authors">Gruhlke, R., Nouy, A., & Trunschke, P.</p>
-  <p class="pub-meta"><em>arXiv preprint</em>, arXiv:2402.03113 (2024) — In revision at JOTA</p>
-      <div class="pub-links">
-    <a class="pub-tag" href="https://arxiv.org/abs/2402.03113" target="_blank">📄 Paper</a>
-    </div>
-</div>
+
+
 
 
 
@@ -386,14 +415,7 @@
       <strong>"Quasi-Monte Carlo Meets Kernel Cubature through Optimal Sampling"</strong><br>
       <span class="collab">with V. Kaarnioja & C. Schillings</span>
     </li>
-    <li>
-      <strong>"Pathwise Tensor Train Approximation of Hamilton–Jacobi–Bellman Equations: A BSDE Perspective"</strong><br>
-      <span class="collab">with J. Berner, L. Richter & D. Sommer</span>
-    </li>
-    <li>
-      <strong>"Conditional Rectified Flows for Homogenization of Materials with Non-Periodic Stochastic Structures"</strong><br>
-      <span class="collab">with M. Eigel, H. Martin, H. Gu & B. Sprungk</span>
-    </li>
+
     <li>
       <strong>"High-Accuracy Physics-Informed Machine Learning with Optimal Sampling and Tensor Networks"</strong><br>
       <span class="collab">with P. Trunschke</span>
@@ -403,6 +425,15 @@
 
 
   <h3>Journal/Conference Papers</h3>
+
+  <div class="publication-card">
+  <h4 class="pub-title">Reverse Diffusion Sampling with Tensor Train Approximations of Hamilton–Jacobi–Bellman Equations</h4>
+  <p class="pub-authors">Gruhlke, R., Sommer, D., Kirstein, M., Eigel, M., & Schillings, C.</p>
+  <p class="pub-meta">SIAM Journal on Scientific Computing, 48(1), C103-C135.</p>
+    <div class="pub-links">
+    <a class="pub-tag" href="https://doi.org/10.1137/24M163721" target="_blank">📄 Paper</a>
+    </div>
+</div>
 
 
   <div class="publication-card">
